--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Olá Mundo</h1>
+    <main>
+        <section id="telefone">
+            <iframe scrolling="no" src="home.html" name="tela" id="tela" frameborder="0" no-s>
+
+            </iframe>
+        </section>
+        <section id="redes-sociais">
+        <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="logo-home"></a><br>
+        <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="logo-facebook"></a><br>
+        <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="logo-github"></a><br>
+        <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a><br>
+        <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="logo-twitter"></a><br>
+        <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="logo-youtube"></a>
+        </section>
+    </main>
 </body>
 </html>
