--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe scrolling="no" src="home.html" name="tela" id="tela" frameborder="0" no-s>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0" no-s>
 
             </iframe>
         </section>
         <section id="redes-sociais">
-        <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="logo-home"></a><br>
-        <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="logo-facebook"></a><br>
-        <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="logo-github"></a><br>
-        <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a><br>
-        <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="logo-twitter"></a><br>
-        <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="logo-youtube"></a>
+        <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="logo-home"></a><br>
+        <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="logo-facebook"></a><br>
+        <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="logo-github"></a><br>
+        <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a><br>
+        <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="logo-twitter"></a><br>
+        <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="logo-youtube"></a>
         </section>
     </main>
 </body>
