--- a/youtube.html
+++ b/youtube.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="imagens/tela-youtube.png" alt="Youtube">
-    <a href="https://www.youtube.com/@CursoemVideo/playlists" target="_blank">ACESSE</a>
+    <a href="https://www.youtube.com/@ricksilva4025/videos" target="_blank">ACESSE</a>
 </body>
 </html>
